<resources>
    <string name="username">用户名：</string>
    <string name="input_username">请输入用户名</string>
    <string name="password">密码：</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="no_account">没有账号？去注册</string>

    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="have_account">已有账户？去登录</string>
    <string name="enter_password_again">再输入一次密码</string>
    <string name="confirm_password_not_empty">确认密码不能为空</string>
    <string name="password_cannot_match">两次密码不相同</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="logout_success">已退出登录</string>
    <string name="logout_ing">正在退出登录</string>
    <string name="login_tint">请先登录</string>
    <string name="login_ing">登录中...</string>
    <string name="register_ing">注册中...</string>
    <string name="user_login">用户登录</string>
    <string name="user_register">注册用户</string>
    <string name="register_tip">用户注册后才可以登录！</string>
</resources>