<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textColor="@color/res_text_gray_m"
            android:textSize="@dimen/base_text_size_18"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="24dp"/>

        <TextView
            android:id="@+id/tv_login_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/login_tip"
            android:textSize="@dimen/res_text_m"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_login"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_user_name"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_tip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_pwd"
            style="@style/TextInputLayout"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tl_user_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/res_layer_main_color"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/base_text_size_17"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tl_pwd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="right"
            android:text="@string/no_account"
            android:textSize="@dimen/res_text_m"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintRight_toRightOf="@+id/btn_login"
            android:layout_marginRight="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>